# submodule-plugins-licensing

./: .gitignore  build.sh
Corona/: main.lua
android/: CMakeLists.txt  build.sh
android/jni/: Android.mk
ios/: AppCoronaDelegate.h  AppCoronaDelegate.mm  build.sh  main.mm
ios/LicensingTestApp.xcodeproj/: project.pbxproj
ios/Plugin.xcodeproj/: project.pbxproj
ios/Plugin.xcodeproj/project.xcworkspace/xcuserdata/vlad.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Plugin.xcodeproj/xcuserdata/vlad.xcuserdatad/xcschemes/: xcschememanagement.plist
mac/: build.sh
mac/Plugin.xcodeproj/: project.pbxproj
shared/: CoronaLicensingLibrary.cpp  CoronaLicensingLibrary.h  CoronaProvider.licensing.lua  licensing.lua
win32/: ReadMe.txt
